# groupes-karamove

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  defs.bzl  edition.bzl  package.json  pnpm-lock.yaml
data_extractor/: BUILD.bazel  Cargo.toml
data_extractor/src/: main.rs
website/: BUILD.bazel  assets.htaccess  defs.bzl  eslint.config.mjs  index.html  package.json  root.htaccess.tmpl  tsconfig.app.json  tsconfig.node.json  vite.config.ts.tmpl
website/src/: app.css.ts  app.tsx  constants.ts  data.ts  exhaustive-check.ts  main.css.ts  main.tsx  theme.css.ts
